# zycelium

./: .editorconfig  .gitignore  .readthedocs.yaml  LICENSE  README.md  nats-config.conf  pyproject.toml  setup.cfg
agent/: cli.go  config.go  endpoint.go  go.mod  log.go  names.go  service.go
agents/hello-agent/: README.md  go.mod  go.sum  main.go
agents/mastodon/: README.md  go.sum  main.go
agents/mastodon-agent/: .env.sample  README.md  go.mod  go.sum  main.go  mastodon-agent.conf.sample  tmux-mastodon.sh
docs/: requirements.txt
docs/source/: agent.rst  api.rst  conf.py  index.rst
examples/01-hello-agent/: README.md  main.py  main_async.py
examples/02-hello-signals/: README.md  main.py  main_async.py
examples/03-hello-events/: README.md  main.py  main_async.py
examples/04-hello-requests/: README.md  main.py  main_async.py
examples/05-hello-state/: README.md  main.py  main_async.py
scripts/: build.py  devsetup.py  docs.py  licenses.py  pypi.py  testpypi.py  tests.py  utils.py
src/zycelium/: __init__.py  agent.py  logging.py  transport.py
tests/: test_agent.py  test_agent_events.py  test_agent_requests.py  test_agent_signals.py
